--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ venv/
 __pycache__/
 *.pyc
 
+# Environment / secrets
+.env
+.env.*
+.env.local
+.env.production
+
 # OS / IDE
 .DS_Store
 .vscode/
